Style still fix text align

--- a/hobbiesStyle.css
+++ b/hobbiesStyle.css
@@ -25,7 +25,7 @@ th, td {
 }
 
 li {
-	display: block;
+	width:100%;
 	text-align: left;
 }
 
